tests/cases/compiler-development/artifact/errors/diagnostic-logical-not-operand-type.diagnostic
diagnostic error code=ari/compiler family=general message="logical operand must be bool, got i64" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/operators/errors/not-non-bool.ari" display="tests/cases/operators/errors/not-non-bool.ari" bytes=51
  Label index=0 role=primary source_id=0 source="tests/cases/operators/errors/not-non-bool.ari" line=2 column=16 end_line=2 end_column=17 byte_start=34 byte_end=35 message=""
  Snippet label=0 text="  --> tests/cases/operators/errors/not-non-bool.ari:2:16\n   |\n 2 |   let value = !1;\n   |                ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/operators/errors/not-non-bool.ari" line=2 column=15 end_line=2 end_column=16 byte_start=33 byte_end=34 message="operator '!' requires bool operands"
  Snippet label=1 text="  --> tests/cases/operators/errors/not-non-bool.ari:2:15\n   |\n 2 |   let value = !1;\n   |               ^"
  Note index=0 location=none message="logical operators do not implicitly convert integers or other values to bool"
  Help index=0 location=none message="compare this value explicitly or produce a bool before applying operator '!'"
